--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ strong {
 
 /* Buttons */
 
-.btn {
+.customButton {
   display: inline-block;
   padding: 0.5em 2.5em;
   background: var(--clr-accent);
@@ -85,7 +85,7 @@ strong {
   transition: transform 200ms ease-in-out;
 }
 
-.btn:hover {
+.customButton:hover {
   transform: scale(1.1);
 }
 
@@ -108,12 +108,19 @@ h3 {
   font-size: var(--fs-h3);
 }
 
+.card-title {
+  font-weight: var(--fw-bold);
+}
+
 .section__title {
   margin-bottom: 0.25em;
+  color: var(--clr-accent);
+  font-weight: var(--fw-bold);
 }
 
 .section__title--intro {
   font-weight: var(--fw-reg);
+  color: var(--clr-dark);
 }
 
 .section__title--intro strong {
@@ -385,33 +392,49 @@ header {
 
 .my-work {
   background-color: var(--clr-dark);
-  color: var(--clr-light);
+  color: var(--clr-dark);
   text-align: center;
 }
 
-.portfolio {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+.card {
+  width: 100%;
 }
 
-.portfolio__item {
-  background: var(--clr-accent);
-  overflow: hidden;
+.card-img-top {
+  height: 300px;
+  width: 100%;
 }
 
-.portfolio__img {
-  transition: transform 750ms cubic-bezier(0.5, 0, 0.5, 1), opacity 250ms linear;
+.card-text {
+  font-size: 30px;
+}
+.fa-html5 {
+  color: orange;
+}
+.fa-js-square {
+  color: rgb(236, 236, 55);
+}
+.fa-css3-alt {
+  color: rgb(21, 146, 196);
+}
+.fa-react {
+  color: blue;
+}
+.fa-bootstrap {
+  color: blueviolet;
 }
 
-.portfolio__item:focus {
-  position: relative;
-  z-index: 2;
-}
-
-.portfolio__img:hover,
-.portfolio__item:focus .portfolio__img {
-  transform: scale(1.2);
-  opacity: 0.5;
+@media (max-width: 767px) {
+  .card {
+    margin-bottom: 30px;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .card-img-top {
+    height: 200px;
+    width: 100%;
+  }
 }
 
 /* footer */
